# toolgrad

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  MANIFEST.in  README.md  core.py  environment.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: mcp_filesystem.py  toolbench.py
examples/configs/: default.gin  gemini-2.5-flash-vertex.gin  gemini-2.5-flash.gin  gemini-2.5-lite-vertex.gin  gemini-2.5-lite.gin  gemini-3-flash.gin
examples/example_outputs/: seed=123__iter=3__num_apis=5.json
examples/example_outputs_mcp/trace_example/: 00123.json
examples/example_outputs_toolbench/: seed=123__iter=5__num_apis=50.json
examples/outputs/: example_seed=123__iter=3__num_apis=5.json
src/: eval.py  eval_lib.py  generate_toolgrad_data.py  prompts.py
src/data/: .gitignore  README.md  data_format_lib.py  data_format_main.py  negative_sample_lib.py  prompt_template.py  split_lib.py
src/models/: model_lib.py  model_lib_test.py
src/scripts/: generate_toolgrad_500.sh  run_bfcl_eval.sh
src/train/: README.md  merge_lora.py  train_sft.py
src/utils/: common_utils.py  metrics_utils.py
static/css/: card-trim.css  index.css  toolgrad-card.css
static/js/: index.js  toolgrad-card.js
toolgrad/: __init__.py  states.py
toolgrad/data/: __init__.py
toolgrad/modules/: graph_lib.py  module_lib.py  prompt_lib.py
toolgrad/prebuilt/: __init__.py  toolgrad_on_mcp.py  toolgrad_on_toolbench.py
toolgrad/utils/: __init__.py  data.py  drive.py  langchain.py  load_example.py  log_utils.py  mcp.py  trace_utils.py
(+16 files in other folders)
